...
    }()
        
    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .systemBackground

        title = "Rocket List"
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationItem.searchController = searchBar

        searchBar.searchResultsUpdater = self

        vm.getAllRockets()
...
                    self.rocketTableView.isHidden = false
                    self.rocketTableView.reloadData()
                    self.searchBar.searchBar.isHidden = false
                } else {
                    self.loadingIndicator.stopAnimating()
                    self.loadingIndicator.isHidden = true
                    self.loadingLabel.text = "Rocket not found!"
                    self.loadingLabel.isHidden = false
                    self.rocketTableView.isHidden = false
                    self.rocketTableView.reloadData()
                }
                
            }
...
