...
    

    override func viewDidLoad() {
        super.viewDidLoad()

        view.backgroundColor = .systemBackground
        title = "Rocket Detail"
        view.addSubview(scrollView)
        scrollView.addSubview(contentView)
        [rocketImage, rocketName, rocketDescription, rocketCostPerLaunch, rocketCountry, rocketFirstFlight]
            .forEach { view in
                contentView.addSubview(view)
            }
...
